--- a/src/forms/FIOForm.form
+++ b/src/forms/FIOForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frames.FIOForm">
-  <grid id="27dc6" binding="rootPanelFIO" custom-create="true" layout-manager="GridBagLayout">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.FIOForm">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="500" height="73"/>
     </constraints>
