--- a/src/forms/UserForm.form
+++ b/src/forms/UserForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frames.UserForm">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.UserForm">
   <grid id="27dc6" binding="rootPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="398" height="213"/>
