--- a/src/forms/FIOForm.form
+++ b/src/forms/FIOForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.FIOForm">
   <grid id="27dc6" binding="rootPanel" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="73"/>
+      <xy x="20" y="20" width="500" height="207"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -24,7 +24,7 @@
       </hspacer>
       <vspacer id="1f936">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
       </vspacer>
@@ -47,6 +47,17 @@
         </constraints>
         <properties>
           <text value="Переключить"/>
+        </properties>
+      </component>
+      <component id="4b6a9" class="javax.swing.JProgressBar" binding="progressBar">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <maximumSize width="32767" height="25"/>
+          <minimumSize width="10" height="25"/>
+          <preferredSize width="146" height="25"/>
         </properties>
       </component>
     </children>
